# corpsumm

./: .python-version  BizSummary.xlsx  build_table.ipynb  catch.ipynb  company_report_crawling.ipynb  html2pdf.ipynb  make_company_trees.ipynb  migration.ipynb  pyproject.toml  stock_name_code.csv  stock_x_id.xlsx  stocksumm_crawling.ipynb  summ2notion.ipynb  table.csv  상장법인목록.xlsx
.ipynb_checkpoints/: html2pdf-checkpoint.ipynb  stocksumm_crawling-checkpoint.ipynb  summ2notion-checkpoint.ipynb  untitled-checkpoint.html
htmls/: 036490_SK머티리얼즈.html  044990_에이치엔에스하이텍.html  045890_GV.html  076340_관악산업.html  086220_네추럴FNP.html  086460_에스엔피제네틱스.html  092590_럭스피아.html  093510_엔지브이아이.html  094800_맵스리얼티1.html  101060_SBS미디어홀딩스.html  103660_씨앗.html  107640_한중엔시에스.html  112190_KC산업.html  114920_대주이엔티.html  116100_태양기계.html  121060_유니포인트.html  136660_큐엠씨.html  140290_청광건설.html  140610_엔솔바이오사이언스.html  140660_위월드.html  148780_비플라이소프트.html  149010_아이케이세미콘.html  150440_피노텍.html  162120_루켄테크놀러지스.html  163430_디피코.html  176750_듀켐바이오.html  178600_대동고려삼.html  179720_렌딩머신.html  180060_탑선.html  183410_골프존데카.html  189350_코셋.html  191600_블루탑.html  199290_바이오프로테크.html  202960_판도라티비.html  206950_볼빅.html  207490_에이펙스인텍.html  208850_이비테크.html  208890_미래엔에듀파트너.html  210120_빅텐츠.html  212310_휴벡셀.html  (+69 more)
report_url/: 028040.txt  033430.txt  05230.txt  112240.txt  GS홈쇼핑(028150).txt  SK머티리얼즈(036490).txt  SM Life Design(06344.txt  내츄럴엔도텍(68330).txt  녹십자셀(031390).txt  디비라이텍(045890).txt  디에스케이.txt  리드(197210).txt  맥스로텍(141070).txt  미래테크놀로지(213090).txt  삼륭물산(104970).txt  에스모(073070).txt  에스티씨(123260).txt  (+12 more)
(+6497 files in other folders)
